--- a/config-cli.jsonc
+++ b/config-cli.jsonc
@@ -1,8 +1,6 @@
 {
 "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
 "logo": {
-  //"source": "~/.config/fastfetch/archlinux-icon.png",
-  //"type": "kitty-direct",
   "height": 15,
   "width": 30,
   "padding": {
@@ -32,7 +30,12 @@
   },
   {
     "type": "shell",
-    "key": " └  SHELL ",
+    "key": " ├  SHELL ",
+    "keyColor": "33",
+  },
+  {
+    "type": "users",
+    "key": " └  USERS ",
     "keyColor": "33",
   },
   "break",
@@ -48,7 +51,17 @@
   },
   {
     "type": "terminalfont",
-    "key": " └  FONT ",
+    "key": " ├  FONT ",
+    "keyColor": "blue",
+  },
+  {
+    "type": "terminalsize",
+    "key": " ├  TERMINAL SIZE ",
+    "keyColor": "blue",
+  },
+  {
+    "type": "terminaltheme",
+    "key": " └  TERMINAL THEME ",
     "keyColor": "blue",
   },
   "break",
@@ -80,8 +93,13 @@
   },
   {
     "type": "display",
-    "key": " └  DISPLAY ",
+    "key": " ├  DISPLAY ",
     "compactType": "original-with-refresh-rate",
+    "keyColor": "31",
+  },
+  {
+    "type": "bluetoothradio",
+    "key": " └ ᛒ BLUETOOTH RADIO ",
     "keyColor": "31",
   },
   "break",
@@ -95,7 +113,17 @@
     "showLoop": false,
     "showFlags": false,
     "showAllIps": false,
-    "keyColor": "cyan"
+    "keyColor": "cyan",
+  },
+  {
+    "type": "locale",
+    "key": " ├  LOCALE ",
+    "keyColor": "cyan",
+  },
+  {
+    "type": "datetime",
+    "key": " ├  DATE & TIME ",
+    "keyColor": "cyan",
   },
   {
     "type": "weather",
@@ -105,10 +133,15 @@
   },
   {
     "type": "cpu",
-    "key": " └  CPU TEMP ",
+    "key": " ├  CPU TEMP ",
     "keyColor": "cyan",
     "temp": true,
     "format": "{temperature}"
+  },
+  {
+    "type": "bluetooth",
+    "key": " ├ ᛒ BLUETOOTH ",
+    "keyColor": "cyan",
   },
   {
     "type": "custom",
