Renamed TERMINAL SIZE and TERMINAL THEME in config-cli.jsonc

--- a/config-cli.jsonc
+++ b/config-cli.jsonc
@@ -56,12 +56,12 @@
   },
   {
     "type": "terminalsize",
-    "key": " ├  TERMINAL SIZE ",
+    "key": " ├  TTY SIZE ",
     "keyColor": "blue",
   },
   {
     "type": "terminaltheme",
-    "key": " └  TERMINAL THEME ",
+    "key": " └  THEME ",
     "keyColor": "blue",
   },
   "break",
