--- a/config-cli.jsonc
+++ b/config-cli.jsonc
@@ -137,7 +137,7 @@
   },
   {
     "type": "bluetooth",
-    "key": " ├ ᛒ BLUETOOTH ",
+    "key": " └ ᛒ BLUETOOTH ",
     "keyColor": "cyan",
   },
   {
