--- a/config-dewm.jsonc
+++ b/config-dewm.jsonc
@@ -20,97 +20,97 @@
   {
     "type": "os",
     "key": " DISTRO",
-    "keyColor": "33",
+    "keyColor": "yellow"
   },
   {
     "type": "kernel",
     "key": " ├  KERNEL ",
-    "keyColor": "33",
+    "keyColor": "yellow"
   },
   {
     "type": "packages",
     "key": " ├ 󰏖 PACKAGES ",
-    "keyColor": "33",
+    "keyColor": "yellow"
   },
   {
     "type": "shell",
     "key": " └  SHELL ",
-    "keyColor": "33",
+    "keyColor": "yellow"
   },
   "break",
   {
     "type": "wm",
     "key": " DE/WM",
-    "keyColor": "blue",
+    "keyColor": "blue"
   },
   {
     "type": "lm",
     "key": " ├  LM ",
-    "keyColor": "blue",
+    "keyColor": "blue"
   },
   {
     "type": "wmtheme",
     "key": " ├ 󰉼 WM THEME ",
-    "keyColor": "blue",
+    "keyColor": "blue"
   },
   {
     "type": "icons",
     "key": " ├ 󰀻 ICON THEME ",
-    "keyColor": "blue",
+    "keyColor": "blue"
   },
   {
     "type": "cursor",
     "key": " ├  CURSOR THEME",
-    "keyColor": "blue",
+    "keyColor": "blue"
   },
   {
     "type": "terminal",
     "key": " ├  TERMINAL ",
-    "keyColor": "blue",
+    "keyColor": "blue"
   },
   {
     "type": "terminalfont",
     "key": " └  FONT ",
-    "keyColor": "blue",
+    "keyColor": "blue"
   },
   "break",
   {
     "type": "chassis",
     "key": "󰌢 SYSTEM",
-    "keyColor": "31",
+    "keyColor": "red"
   },
   {
     "type": "cpu",
     "format": "{1} ({3}) @ {7} GHz",
     "key": " ├  CPU ",
-    "keyColor": "31",
+    "keyColor": "red"
   },
   {
     "type": "gpu",
     "format": "{2}",
     "key": " ├ 󰢮 GPU ",
-    "keyColor": "31",
+    "keyColor": "red"
   },
   {
     "type": "memory",
     "key": " ├  MEM ",
-    "keyColor": "31",
+    "keyColor": "red"
   },
   {
     "type": "swap",
     "key": " ├ 󰓡 SWAP ",
-    "keyColor": "31",
+    "keyColor": "red"
   },
   {
     "type": "disk",
     "key": " ├ 󰋊 DISK ",
-    "keyColor": "31",
+    "keyColor": "red"
   },
   {
     "type": "display",
     "key": " └  DISPLAY ",
     "compactType": "original-with-refresh-rate",
-    "keyColor": "31",
+    "keyColor": "red"
   },
   "break",
   {
